--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "check": "tsc --noEmit",
+    "format": "prettier --write '**/*.{css,html,js,jsx,json,md,ts,tsx,yml,yaml}'",
     "test": "jest"
   },
   "repository": {
@@ -22,6 +23,7 @@
     "@types/jest": "^24.9.0",
     "@types/node": "^13.1.8",
     "jest": "^24.9.0",
+    "prettier": "^1.19.1",
     "ts-jest": "^24.3.0",
     "typescript": "^3.7.5"
   }
