--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/marcobiedermann/codewars#readme",
   "devDependencies": {
+    "@marcobiedermann/tsconfig": "^1.0.0",
     "@types/jest": "^26.0.13",
     "@types/node": "^14.10.1",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
