--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,5 @@ node_js:
   - 'node'
   - 'lts/*'
 script:
-  - npm run check
   - npm run lint
-  - npm run test:ci
+  - npm test && npm run report-coverage
