--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ node_js:
   - 'lts/*'
 script:
   - npm run lint
-  - npm test && npm run report-coverage
+  - npm test -- --ci --colors --maxWorkers=4 && npm run report-coverage
