--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,7 @@ jobs:
       - run: npm ci
       - run: npm run lint --if-present
       - run: npm run build --if-present
-      - run: npm test
+      - run: npm run test:ci
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
