--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "My attempt of solving Codewars Katas.",
   "scripts": {
+    "build": "npm run check",
     "check": "tsc --noEmit",
     "format": "prettier --ignore-path .gitignore --write .",
     "lint": "eslint --ignore-path .gitignore '**/*.{js,jsx,ts,tsx}'",
     "prepare": "husky install",
     "pretty-quick": "pretty-quick --staged",
-    "test": "jest",
+    "test": "jest --color --runInBand",
     "test:ci": "npm run test -- --ci"
   },
   "bin": {
