--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "npm run check",
     "check": "tsc --noEmit",
     "format": "prettier --ignore-path .gitignore --write .",
-    "lint:js": "eslint --ignore-path .gitignore '**/*.{js,jsx,ts,tsx}'",
+    "lint:js": "eslint --cache --ignore-path .gitignore '**/*.{js,jsx,ts,tsx}'",
     "lint": "npm run lint:js",
     "prepare": "husky install",
     "pretty-quick": "pretty-quick --staged",
