--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "npm run check",
     "check": "tsc --noEmit",
     "format": "prettier --ignore-path .gitignore --write .",
-    "lint:js": "eslint --cache --ignore-path .gitignore '**/*.{js,jsx,ts,tsx}'",
+    "lint:js": "eslint --ignore-path .gitignore .",
     "lint": "npm run lint:js",
     "prepare": "husky install",
     "pretty-quick": "pretty-quick --staged",
@@ -40,13 +40,13 @@
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.2",
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jest": "^24.5.0",
+    "eslint-plugin-jest": "^24.5.2",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.2",
     "jest": "^27.2.4",
