--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   },
   "homepage": "https://github.com/marcobiedermann/codewars#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-typescript": "^7.15.0",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.2",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
@@ -52,8 +54,6 @@
     "jest": "^27.2.4",
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.1",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   }
 }
