--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prepare": "husky install",
     "pretty-quick": "pretty-quick --staged",
     "test": "jest --maxWorkers=50% --watch",
-    "test:ci": "jest --ci --coverage --runInBand"
+    "test:ci": "jest --ci --coverage"
   },
   "bin": {
     "@marcobiedermann/codewars": "./bin/index.js"
@@ -38,8 +38,7 @@
   },
   "homepage": "https://github.com/marcobiedermann/codewars#readme",
   "devDependencies": {
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-typescript": "^7.16.7",
+    "@swc/jest": "^0.2.17",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.13",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
@@ -54,7 +53,6 @@
     "jest": "^27.4.7",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
-    "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   }
 }
