--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prepare": "husky install",
     "pretty-quick": "pretty-quick --staged",
     "test": "jest --maxWorkers=50% --watch",
-    "test:ci": "jest --ci --coverage"
+    "test:ci": "jest --ci --coverage",
+    "update": "npx npm-check-updates --format group --interactive"
   },
   "bin": {
     "@marcobiedermann/codewars": "./bin/index.mjs"
@@ -41,9 +42,9 @@
   "devDependencies": {
     "@swc/jest": "^0.2.22",
     "@types/jest": "^29.0.0",
-    "@types/node": "^18.7.14",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@types/node": "^18.7.15",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
     "eslint": "^8.23.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
@@ -51,7 +52,7 @@
     "eslint-plugin-jest": "^26.8.4",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
-    "jest": "^29.0.1",
+    "jest": "^29.0.2",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
     "typescript": "^4.8.2"
