--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "npm run check",
     "check": "tsc --noEmit",
-    "format": "prettier --ignore-path .gitignore --write .",
-    "lint:js": "eslint --ignore-path .gitignore .",
+    "format": "prettier --cache --ignore-path .gitignore --write .",
+    "lint:js": "eslint --cache --ignore-path .gitignore .",
     "lint": "npm run lint:js",
     "prepare": "husky install",
     "pretty-quick": "pretty-quick --staged",
