--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 12,
+    "project": ["./tsconfig.json"],
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint"],
