--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "lint": "npm run lint:js",
     "prepare": "husky install",
     "pretty-quick": "pretty-quick --staged",
-    "test": "jest --maxWorkers=50% --watch",
-    "test:ci": "jest --ci --coverage",
+    "test": "vitest",
+    "test:ci": "vitest run --coverage",
     "update": "npx npm-check-updates --format group --interactive"
   },
   "bin": {
@@ -40,21 +40,18 @@
   },
   "homepage": "https://github.com/marcobiedermann/codewars#readme",
   "devDependencies": {
-    "@swc/jest": "^0.2.24",
-    "@types/jest": "^29.2.5",
-    "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
+    "@vitest/coverage-c8": "^0.29.2",
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
-    "jest": "^29.3.1",
     "prettier": "^2.8.2",
     "pretty-quick": "^3.1.3",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "vitest": "^0.29.2"
   }
 }
