chore: Dependabot Groups
Group related dependencies within one pull request

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,3 +4,12 @@ updates:
     directory: '/'
     schedule:
       interval: 'monthly'
+    groups:
+      eslint:
+        patterns:
+          - '@typescript-eslint/*'
+          - 'eslint*'
+      vitest:
+        patterns:
+          - '@vitest/*'
+          - 'vitest'
