--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "format": "prettier --cache --ignore-path .gitignore --write .",
     "lint:js": "eslint --cache --ignore-path .gitignore .",
     "lint": "npm run lint:js",
-    "prepare": "husky install",
+    "prepare": "husky",
     "pretty-quick": "pretty-quick --staged",
     "test": "vitest",
     "test:ci": "vitest run --coverage",
@@ -45,10 +45,13 @@
     "@vitest/coverage-v8": "^1.6.0",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^8.8.0",
-    "husky": "^8.0.3",
-    "prettier": "^2.8.8",
-    "pretty-quick": "^3.3.1",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
     "typescript": "^5.4.5",
     "vitest": "^1.5.3"
+  },
+  "lint-staged": {
+    "**/*": "npm run format"
   }
 }
