--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [main]
 
+env:
+  HUSKY: 0
+
 jobs:
   ci:
     uses: marcobiedermann/actions/.github/workflows/ci.yml@main
