--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run check",
     "check": "tsc --noEmit",
     "format": "prettier --cache --ignore-path .gitignore --write .",
-    "lint:js": "eslint --cache --ignore-path .gitignore .",
+    "lint:js": "eslint .",
     "lint": "npm run lint:js",
     "prepare": "husky",
     "test": "node --experimental-strip-types --no-warnings --test --watch",
@@ -39,15 +39,15 @@
   },
   "homepage": "https://github.com/marcobiedermann/codewars#readme",
   "devDependencies": {
+    "@eslint/js": "^9.18.0",
     "@types/node": "^22.10.6",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "eslint": "^8.51.0",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint": "^9.18.0",
+    "globals": "^15.14.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.3.0",
     "prettier": "^3.4.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0"
   },
   "lint-staged": {
     "**/*": "npm run format"
